Windows: Fix embedded application not getting focus after clicking outside

Amend the check introduced by bde6a049494f40cd71004d6926899f115af0c3e6
to not apply to embedded windows and plugin applications.

Fixes: QTBUG-71991
Task-number: QTBUG-7081
Change-Id: I80b3dc0fa20ee3447a4bc4bbb41e66d4d90ab726
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>